--- a/task1/Makefile
+++ b/task1/Makefile
@@ -2,17 +2,13 @@ obj-m := hello.o
 
 getDir: SHELL := /bin/bash
 getDir:
-	dirVar="abc";
-	echo $(dirVar)
 	@if [ -z "$(dir)" ]; then\
-		dirVar="/lib/modules/$(shell uname -r)/build";\
 		echo Picking default value;\
-		echo $(dirVar);\
+		make -C /lib/modules/$(shell uname -r)/build M=`pwd`;\
 	else\
 		echo Picking from env variable;\
-		dirVar=$dir;\
+		make -C $(shell $dir) M=`pwd`;\
 	fi
-	echo $(dirVar);
 
 all:
 	make -C $(shell $dirVar) M=`pwd`
