--- a/task1/Makefile
+++ b/task1/Makefile
@@ -1,14 +1,12 @@
 obj-m := hello.o
 
-getDir: SHELL := /bin/bash
 getDir:
-	@if [ -z "$(dir)" ]; then\
+	@if [ -z $(dir) ]; then\
 		echo Picking default value;\
 		make -C /lib/modules/$(shell uname -r)/build M=`pwd`;\
+		sudo insmod hello.ko;\
 	else\
 		echo Picking from env variable;\
-		make -C $(shell $dir) M=`pwd`;\
+		make -C $(dir) M=`pwd`;\
+                sudo insmod hello.ko;\
 	fi
-
-all:
-	make -C $(shell $dirVar) M=`pwd`
